# unitprompt

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml  publish.yml  test-build.yml
jest/: .env.example  .gitignore  README.md  package-lock.json  package.json  prompts  tsconfig.build.json  tsconfig.json
jest/__tests__/: fulfill.test.ts  parsable.test.ts  style.test.ts  uses.test.ts
jest/src/: customMatchers.ts  llm.ts  setup.ts  unitPromptMatchers.ts
jest/src/matchers/: toFulfill.ts
jest/src/matchers/parsable/: toBeParsableCsv.ts  toBeParsableJson.ts  toBeParsableXml.ts  toBeParsableYaml.ts
jest/src/matchers/style/: toBeConcise.ts
jest/src/matchers/uses/: toUseHtml.ts  toUseLatex.ts  toUseMarkdown.ts
jest/src/utils/: getPrompt.ts
pytest/: .gitignore  README.md  pyproject.toml
pytest/tests/: test_fulfills.py  test_parsable.py  test_style.py  test_uses.py
pytest/unitprompt/: __init__.py  llm.py  unit_prompt_matcher.py
pytest/unitprompt/matchers/: test_fulfills.py
pytest/unitprompt/matchers/parsable/: test_parsable_csv.py  test_parsable_json.py  test_parsable_xml.py  test_parsable_yaml.py
pytest/unitprompt/matchers/style/: test_conciseness.py
pytest/unitprompt/matchers/uses/: test_uses_html.py  test_uses_latex.py  test_uses_markdown.py
pytest/unitprompt/utils/: get_prompt.py
shared/prompts/: concise.txt  concise_answer.txt
