[tool.poetry]
name = "unitprompt"
version = "0.0.2"
description = "A custom pytest matcher that helps you test prompts"
authors = ["Jannis Conen <jannis.conen@gmail.com>"]
readme = "README.md"
packages = [{include = "unitprompt"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
langchain = "^0.2.11"
langchain-openai = "^0.1.19"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
